--- a/angular-acme/package.json
+++ b/angular-acme/package.json
@@ -8,6 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "format": "prettier --write \"src/**/*.{ts,js,json,css,scss,html}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json,css,scss,html}\""
   },
